manyaml/kavu-liveness-probe-initial-delay.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kavu-liveness-initdelay
spec:
  containers:
    - image: luksa/kubia-unhealthy
      name: kubia
      livenessProbe:
        httpGet:
          path: /
          port: 8080
        initialDelaySeconds: 15
