manyaml/kavu-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kavu
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: kavu
